# hexlet-python-challenges

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
hexlet_python_challenges/python_basics/: README.md
hexlet_python_challenges/python_basics/angle_difference/: README.md  solution.py
hexlet_python_challenges/python_basics/binary_sum/: README.md  solution.py
hexlet_python_challenges/python_basics/facade/: README.md
hexlet_python_challenges/python_basics/fibonacci/: README.md  solution.py
hexlet_python_challenges/python_basics/fizzbuzz/: README.md  solution.py
hexlet_python_challenges/python_basics/line_classification/: README.md  solution.py
hexlet_python_challenges/python_basics/palindrome/: README.md  solution.py
hexlet_python_challenges/python_basics/power_of_three/: README.md  solution.py
hexlet_python_challenges/python_basics/tuple_rotation/: README.md  solution.py
hexlet_python_challenges/python_dicts/: README.md
hexlet_python_challenges/python_dicts/dictionaries_merge/: README.md  solution.py
hexlet_python_challenges/python_dicts/find_where/: README.md  solution.py
hexlet_python_challenges/python_dicts/operations/: README.md  solution.py
hexlet_python_challenges/python_dicts/query_string/: README.md  solution.py
hexlet_python_challenges/python_dicts/scrabble/: README.md  solution.py
hexlet_python_challenges/python_dicts/to_rna/: README.md  solution.py
hexlet_python_challenges/python_functions/: README.md
hexlet_python_challenges/python_lists/: README.md
(+68 files in other folders)
