[tool.poetry]
name = "hexlet-python-challenges"
version = "0.1.0"
description = ""
authors = ["Dmitry Samoylenko <dimsamoylenko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.4"
pre-commit = "^2.13.0"
wemake-python-styleguide = "^0.15.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
